[PC-00] fix update public paths auth and add swagger doc